# c-snippets

./: .clang-format  README.md
c_base64/: LICENSE  README.md  base64.h
c_base64/test/: base64_fuzz.c  base64_unittests.c  gen-testcases.py  meson.build  meson_options.txt
survival/: survival.c  survival.h
survival/test/: Makefile  slice.c  slice.h  survival_demo.c
